# Bomb-paste

./: .env  Cargo.toml  Dockerfile  Procfile  README.md  askama.toml  config.example.toml  example.env  project.toml  run.bat  run.sh  rust-toolchain.toml
src/: helpers.rs  main.rs  models.rs  templates.rs
static/css/: styles.css
static/js/: index.js  languages.js
static/templates/: base.html  help.html  index.html  internalerror.html  notfound.html  view_paste.html
